pipes, directives, services, reactividad rxjs and linters

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,7 @@
-<input type="text" [(ngModel)]="img"><br>
+<!-- <input type="text" [(ngModel)]="img"><br>
 
 <button (click)="toggleImage()">Toggle Img</button>
 <p>{{showImage}}</p>
-<app-img *ngIf="showImage == true" [img]="img" (loaded)="onLoaded($event)"></app-img>
-
-<app-product *ngFor="let item of products" [product]="item" ></app-product>
-
-
+<app-img *ngIf="showImage == true" [img]="img" (loaded)="onLoaded($event)"></app-img> -->
+<app-nav></app-nav>
+<app-products></app-products>
