--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
+@import url(../src/styless/reset.css);
+
+*{
+  font-family: 'Quicksand', sans-serif;
+}
+
+.products--grid app-img  img{
+  border-radius: 10px;
+}
